@@ -1,107 +1,3 @@
- 17303       olly Wed May 22 10:04:25 GMT 2013  Olly Betts <olly@survex.com>
-
- 17303       olly Wed May 22 10:04:25 GMT 2013  Olly Betts <olly@survex.com>
-	* configure.ac: When generating ABI compatibility checks in
-	  xapian/version.h, pass $CXXFLAGS and $CPPFLAGS to $CXXCPP as they
-	  could contain options which affect the ABI (such as -fabi-version
-	  for GCC).  (Fixes #622)
-
- 17302       olly Wed May 22 04:20:39 GMT 2013  Olly Betts <olly@survex.com>
-	* common/win32_uuid.cc: Microsoft GUIDs in binary form have reversed
-	  byte order in the first three components compared to standard UUIDs,
-	  so the same database would report a different UUID on Windows to
-	  on other platforms.  With this fix, the UUIDs of existing databases
-	  will appear to change on Windows (except in rare "palindronic" cases).
-
- 17301       olly Fri May 17 05:52:43 GMT 2013  Olly Betts <olly@survex.com>
-	* docs/overview.rst: Correct documentation for stub files specifying
-	  "prog" remote databases.
-
- 17300       olly Thu May 16 05:47:40 GMT 2013  Olly Betts <olly@survex.com>
-	* backends/chert/chert_dbcheck.cc: Code tweak for clarity.
-
- 17299       olly Thu May 16 05:46:42 GMT 2013  Olly Betts <olly@survex.com>
-	* backends/chert/chert_dbcheck.cc: Fix database check that first docid
-	  in each doclength chunk is more than the last docid in the previous
-	  chunk - previously this didn't actually work.
-
- 17298       olly Thu May 16 05:45:04 GMT 2013  Olly Betts <olly@survex.com>
-	* common/bitstream.h: Fix database check not to falsely report
-	  "position table: Junk after position data" whenever there are 7
-	  unused bits (7 is OK, *more* than 7 isn't).
-
-backported for 1.2.16:
-
- 17295       olly Tue May 14 12:42:11 GMT 2013  Olly Betts <olly@survex.com>
-	* m4-macros/xapian-1.3.m4: Adjust XO_LIB_XAPIAN to strip _gitNNN
-	  suffix from snapshot versions.
-
- 17292       olly Sun May 12 06:11:36 GMT 2013  Olly Betts <olly@survex.com>
-	* configure.ac: Simplify previous change.
- 17291       olly Sun May 12 06:06:47 GMT 2013  Olly Betts <olly@survex.com>
-	* configure.ac: Handle git snapshot naming when calculating REVISION.
-
- 17265       olly Wed May 08 08:51:22 GMT 2013  Olly Betts <olly@survex.com>
-	* backends/brass/brass_version.cc,backends/chert/chert_version.cc:
-	  Remove unused '#include <cstdio>'.
-
-Xapian-core 1.3.2 (2013-05-24):
-
- 17270       olly Wed May 08 11:56:27 GMT 2013  Olly Betts <olly@survex.com>
-	* HACKING,INSTALL,Makefile.am,README,docs/Makefile.am,docs/install.rst,
-	  docs/stemming.rst,languages/Makefile.mk,queryparser/Makefile.mk,
-	  tests/Makefile.am,tests/perftest/perftest.cc: SVN -> git.
-
- 17264       olly Mon May 06 11:10:25 GMT 2013  Olly Betts <olly@survex.com>
-	* api/omenquire.cc,configure.ac,include/xapian/enquire.h: Merge two
-	  Enquire::get_eset() overloaded forms into one with a default value
-	  for parameter min_wt.
-
-API:
-
-
-testsuite:
-
-
-matcher:
-
-
-brass backend:
-
-
-chert backend:
-
-
-flint backend:
-
-
-remote backend:
-
-
-inmemory backend:
-
-
-build system:
-
-
-documentation:
-
-
-tools:
-
-
-examples:
-
-
-portability:
-
-
-packaging:
-
-
-debug code:
-
-
 Xapian-core 1.3.1 (2013-05-03):
 
 This release includes all changes from 1.2.10-1.2.15 which are relevant.
